changes in app.js for mcq and essay post method

--- a/Templates/views/header.ejs
+++ b/Templates/views/header.ejs
@@ -34,14 +34,14 @@
                 <span class="tool">Instructions</span>
             </li>
             <li>
-                <a href="#">
+                <a href="/mcq">
                     <i class=''>1</i>
                     <span class="links_name">Question 1</span>
                 </a>
                 <span class="tool">Question 1</span>
             </li>
             <li>
-                <a href="#">
+                <a href="/essay">
                     <i class=''>2</i>
                     <span class="links_name">Question 2</span>
                 </a>
@@ -92,3 +92,4 @@
             </div>
         </div>
     </nav>
+<!-- Navbar - End -->
