--- a/Templates/views/essay.ejs
+++ b/Templates/views/essay.ejs
@@ -19,5 +19,23 @@
         </div>
     </div>
     <!-- MCQ - End -->
+    <script>
+        window.onload = function () {
+        var minute = 50;
+        var sec = 60;
+        setInterval(function () {
+            document.getElementById("timer").innerHTML = minute + " : " + sec;
+            sec--;
+            if (sec == 00) {
+                minute--;
+                sec = 60;
+                if (minute == 0) {
+                    minute = 5;
+                }
+            }
+        }, 1000);
+    }
+        </script>
+
 </body>
 </html>
