--- a/Templates/views/essay.ejs
+++ b/Templates/views/essay.ejs
@@ -4,9 +4,9 @@
     <div class="wrapper mb-4 ">
         <div class="container card-body align-self-center">
             <h6 id="question">  
-                <%= use[ra].problem %></h6>
+                <%= use[ra].essayQuestion %></h6>
             <hr>
-            <p><%= use[ra].desc %></p>
+            <p><%= use[ra].Description %></p>
             <form action="/essay" method="POST">
             <div class="">
                 <div class="checkbox form-check my-3">
