--- a/Templates/views/include/_form.ejs
+++ b/Templates/views/include/_form.ejs
@@ -26,7 +26,14 @@
             <label for="IsCorrect" class="text-light">IsCorrect</label>
             <input type="text" name="IsCorrect" value="" placeholder="Correct Option">
         </div>
-
+        <div class="form-group">
+            <label for="essayQuestion" class="text-light">Essay-Question</label>
+            <input type="text" name="essayQuestion" value="" placeholder="Essay Question">
+        </div>
+        <div class="form-group">
+            <label for="Description" class="text-light">Description</label>
+            <input type="text" name="Description" value="" placeholder="Description">
+        </div>
         <div class="form-group">
             <button type="submit" class="btn text-dark update">Save</button>
         </div>
