--- a/Templates/views/include/_show.ejs
+++ b/Templates/views/include/_show.ejs
@@ -7,6 +7,8 @@
         <td><%= users[i].Option3 %></td>
         <td><%= users[i].Option4 %></td>
         <td><%= users[i].IsCorrect %></td>
+        <td><%= users[i].essayQuestion %></td>
+        <td><%= users[i].Description %></td>
         <td>
             <a href="/update-user?id=<%= users[i]._id%>" class="btn border-shadow update">
                 <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
