--- a/Templates/views/index.ejs
+++ b/Templates/views/index.ejs
@@ -23,6 +23,8 @@
                             <th>Option3</th>
                             <th>Option4</th>
                             <th>IsCorrect</th>
+                            <th>Essay-Question</th>
+                            <th>Description</th>
                             <th>Action</th>
                         </tr>
                     </thead>
