--- a/Templates/views/update_user.ejs
+++ b/Templates/views/update_user.ejs
@@ -1,6 +1,5 @@
 <!-- include header -->
 <%- include('include/_header') %>
-<!-- /include header -->
   <!-- Main Site -->
   <main id="site-main">
     <div class="container">
@@ -41,6 +40,14 @@
         <div class="form-group">
             <label for="IsCorrect" class="text-light">IsCorrect</label>
             <input type="text" name="IsCorrect" value="<%= user.IsCorrect%>" placeholder="IsCorrect">
+        </div>
+        <div class="form-group">
+            <label for="essayQuestion" class="text-light">Essay-Question</label>
+            <input type="text" name="essayQuestion" value="<%= user.essayQuestion%>" placeholder="Essay-Question">
+        </div>
+        <div class="form-group">
+            <label for="Description" class="text-light">Description</label>
+            <input type="text" name="Description" value="<%= user.Description%>" placeholder="Description">
         </div>
         <div class="form-group">
             <button type="submit" class="btn text-dark update">Save</button>
