--- a/Templates/views/base.ejs
+++ b/Templates/views/base.ejs
@@ -1,22 +1,47 @@
 <%- include('header1') -%>
 
-<div class="text-center center-div" id="login">
-    <div class="container w-25 border py-5">
-        <div class="title pb-5">
-            <h2 class="font-weidth-bold">Admin Login System</h2>
-            <span>Login for existing User</span>
+<div class="limiter">
+    <div class="container-login100">
+        <div class="wrap-login100">
+            <div class="login100-pic " data-tilt>
+                <img class="mb-5" src="images/img-01.png" alt="IMG">
+            </div>
+
+            <form action="/login" method="POST" class="login100-form validate-form">
+                <span class="login100-form-title">
+                    Admin Login
+                </span>
+
+                <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+                    <input class="input100" type="email" name="email" placeholder="Email">
+                    <span class="focus-input100"></span>
+                    <span class="symbol-input100">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                    </span>
+                </div>
+
+                <div class="wrap-input100 validate-input" data-validate = "Password is required">
+                    <input class="input100" type="password" name="password" placeholder="Password">
+                    <span class="focus-input100"></span>
+                    <span class="symbol-input100">
+                        <i class="fa fa-lock" aria-hidden="true"></i>
+                    </span>
+                </div>
+                
+                <div class="container-login100-form-btn">
+                    <button class="login100-form-btn">
+                        Login
+                    </button>
+                </div>
+
+                <div class="text-center p-t-12">
+                    
+                </div>
+
+                <div class="text-center p-t-136">
+                </div>
+            </form>
         </div>
-        <form action="/login" method="POST" class="pt-3">
-            <div class="mb-2 form-group">
-                <input type="email" class="form-control" placeholder="email" name="email">
-            </div>
-            <div class="mb-2 form-group">
-                <input type="password" class="form-control" name="password" placeholder="password">
-            </div>
-            <div>
-                <button type="submit" class="btn btn-success rounded-pil">submit</button>
-            </div>
-        </form>
     </div>
 </div>
 
