admin sign out and essay timer

--- a/Templates/views/index.ejs
+++ b/Templates/views/index.ejs
@@ -9,7 +9,11 @@
                 <a href="/add-user" class="border-shadow">
                     <span class="text-gradient">New Question <i class="fas fa-user"></i></span>
                 </a>
+                <a href="/" class="border-shadow">
+                    <span class="text-gradient">Log Out</span>
+                </a>
             </div>
+            
 
             <!-- form handling -->
             <form action="/" method="POST">
