--- a/Templates/views/base.ejs
+++ b/Templates/views/base.ejs
@@ -29,8 +29,11 @@
                 </div>
                 
                 <div class="container-login100-form-btn">
-                    <button class="login100-form-btn">
+                    <button class="login100-form-btn mb-3">
                         Login
+                    </button>
+                    <button class="login100-form-btn">
+                        <a class="login100-form-btn" href="/" style="text-decoration: none; color: white;">User login</a>
                     </button>
                 </div>
 
