--- a/Templates/views/index.ejs
+++ b/Templates/views/index.ejs
@@ -7,14 +7,12 @@
         <div class="container">
             <div class="box-nav d-flex justify-between">
                 <a href="/add-user" class="border-shadow">
-                    <span class="text-gradient">New Question <i class="fas fa-user"></i></span>
+                    <span class="text-gradient">New Question</span>
                 </a>
-                <a href="/" class="border-shadow">
-                    <span class="text-gradient">Log Out</span>
+                <a href="/login" class="border-shadow">
+                    <span class="text-gradient">Log Out <i class="fas fa-user"></i></span>
                 </a>
             </div>
-            
-
             <!-- form handling -->
             <form action="/" method="POST">
                 <table class="table">
