--- a/Templates/views/register.ejs
+++ b/Templates/views/register.ejs
@@ -1,62 +1,75 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<title>Login</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="../css/main.css">
 </head>
 <body>
-  <section class="vh-100" style="background-color: #8AD7C1;">
-    <div class="container h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100" >
-        <div class="col-lg-12 col-xl-11">
-          <div class="card text-black shadow" style="border-radius: 25px;  ">
-            <div class="card-body p-md-5">
-              <div class="row justify-content-center">
-                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
-                  <form action="/register" method="POST">
-                      <div class="d-flex flex-row align-items-center mb-4">
-                        <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                        <div class="form-outline flex-fill mb-0">
-                          <input type="text" class="form-control" placeholder="First Name" value=""
-                            name="firstname" />
-                        </div>
-                      </div>
-                      <div class="d-flex flex-row align-items-center mb-4">
-                        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                        <div class="form-outline flex-fill mb-0">
-                          <input type="email" id="form3Example3c" class="form-control"placeholder="Email Id" name="myemail" />
-                        </div>
-                      </div>
-                      <div class="d-flex flex-row align-items-center mb-4">
-                        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                        <div class="form-outline flex-fill mb-0">
-                          <input type="password" id="form3Example4c" class="form-control" placeholder="Password" name="mypassword" />
-                        </div>
-                      </div>
-                      <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                        <input type="Submit" class="btn btn-dark rounded-pill" value="Register" />
-                      </div>
-                      <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <a href="/login" class="btn btn-dark rounded-pill">For Admin </a>
-                      </div>
-                  </form>
-                </div>
-                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-
-                  <img src="https://mdbootstrap.com/img/Photos/new-templates/bootstrap-registration/draw1.png"
-                    class="img-fluid" alt="Sample image">
-                </div>
-              </div>
+<div class="limiter">
+    <div class="container-login100">
+        <div class="wrap-login100">
+            <div class="login100-pic " data-tilt>
+                <img class="mb-5" src="images/img-01.png" alt="IMG">
             </div>
-          </div>
+
+            <form action="/register" method="POST" class="login100-form validate-form">
+                <span class="login100-form-title">
+                    User Login
+                </span>
+                <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+                  <input class="input100" type="text" name="firstname" placeholder="First Name">
+                  <span class="focus-input100"></span>
+                  <span class="symbol-input100">
+                      <i class="fa fa-user" aria-hidden="true"></i>
+                  </span>
+              </div>
+                <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+                    <input class="input100" type="email" name="myemail" placeholder="Email">
+                    <span class="focus-input100"></span>
+                    <span class="symbol-input100">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                    </span>
+                </div>
+             
+                <div class="wrap-input100 validate-input" data-validate = "Password is required">
+                    <input class="input100" type="password" name="mypassword" placeholder="Password">
+                    <span class="focus-input100"></span>
+                    <span class="symbol-input100">
+                        <i class="fa fa-lock" aria-hidden="true"></i>
+                    </span>
+                </div>
+                
+                <div class="container-login100-form-btn">
+                    <button class="login100-form-btn mb-3">
+                        Login
+                    </button>
+                    <button class="login100-form-btn">
+                        <a class="login100-form-btn" href="/login" style="text-decoration: none; color: white;">Admin login</a>
+                    </button>
+                </div>
+
+                <div class="text-center p-t-12">
+                    
+                </div>
+
+                <div class="text-center p-t-136">
+                </div>
+            </form>
         </div>
-      </div>
     </div>
-  </section>
+</div>
+
+</body>
+</html>
 </body>
 
 </html>
